--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "dependencies": {
     "axios": "0.19.0",
     "node-sass": "4.12.0",
-    "prop-types": "15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "7.1.0",
@@ -19,6 +18,11 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "set CI=true&&npm test"
+    }
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -36,12 +40,10 @@
     ]
   },
   "devDependencies": {
-    "check-prop-types": "1.1.2",
     "enzyme": "3.10.0",
     "enzyme-adapter-react-16": "1.14.0",
     "gh-pages": "2.0.1",
     "husky": "2.7.0",
-    "jest-enzyme": "7.0.2",
-    "moxios": "0.4.0"
+    "jest-enzyme": "7.0.2"
   }
 }
