--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "chuck-norris-facts",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://diegochagas.com/chuck-norris-facts",
   "dependencies": {
     "axios": "0.19.0",
     "node-sass": "4.12.0",
@@ -17,7 +18,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "husky": {
     "hooks": {
